ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-service
spec:
  ingressClassName: nginx
  rules:
  - host: a7190fa5426d24794a461d27faba95c3-312545612.us-east-1.elb.amazonaws.com  # Your ELB hostname
    http:
        paths:
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 5001
